-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# SIGSEGV (0xb) at pc=0x00007fd1c42077ed, pid=2093, tid=2102
V [libjvm.so+0x13de7ed] Node::add_out(Node*)+0xfd
V [libjvm.so+0x13d68eb] Node::Node(Node*, Node*, Node*, Node*)+0xeb
V [libjvm.so+0x1226ea5] PhaseMacroExpand::expand_mh_intrinsic_return(CallStaticJavaNode*)+0xd55
V [libjvm.so+0x122cd75] PhaseMacroExpand::expand_macro_nodes()+0xba5
V [libjvm.so+0x13de7ed] Node::add_out(Node*)+0xfd
V [libjvm.so+0x13d68eb] Node::Node(Node*, Node*, Node*, Node*)+0xeb
V [libjvm.so+0x1226ea5] PhaseMacroExpand::expand_mh_intrinsic_return(CallStaticJavaNode*)+0xd55
V [libjvm.so+0x122cd75] PhaseMacroExpand::expand_macro_nodes()+0xba5