8189268: [MVT] C2 fails with SIGSEGV in PhaseMacroExpand::expand_mh_intrinsic_return()

Reviewed-by: roland